--- a/data_model_projecct/app/templates/app/name_with_age.html
+++ b/data_model_projecct/app/templates/app/name_with_age.html
@@ -8,7 +8,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
         <link href="//cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        
+        <link rel="icon" href="{% static 'app/icon.ico' %}" type="image/x-icon">
         <script src="{% static 'app/customjs.js' %}" ></script>
 
 <style>
